--- a/index.html
+++ b/index.html
@@ -1,110 +1,87 @@
-<!DOCTYPE html>
+# OrangeJs橘衫の脚本
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/OrangeJs_logo.png)
 
-<html>
+这是一个由我使用Auto.js软件制作的脚本合辑，将在此开放脚本代码以及保持更新，欢迎使用以及提供您宝贵的意见:D
 
-    <head>
+**[点击下载OrangeJs（橘衫の脚本）APK（1.0）](https://www.lanzous.com/i8gs5li)**
 
-        <meta charset="utf-8">
+# 脚本总数：14
+## 当前可用：9
 
-        <title>一个网页</title>
+## 【脚本】[自动集福气（淘宝脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90Orange%20Js%20%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E8%87%AA%E5%8A%A8%E9%9B%86%E7%A6%8F%E6%B0%94)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
 
- <<link rel="stylesheet"         type="text/css"
+**淘宝“集福气赢福果”活动自动脚本“自动集福气”，支持全分辨率，一键运行，支持定时运行，支持多账号完成任务，支持自动判断各种活动任务等**
 
-href="index1.css"/>
+## 【脚本】[东东农场自动脚本（京东脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90OrangeJs%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E4%B8%9C%E4%B8%9C%E5%86%9C%E5%9C%BA%E8%87%AA%E5%8A%A8%E8%84%9A%E6%9C%AC%EF%BC%88%E4%BA%AC%E4%B8%9C%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
 
-    </head>
+**脚本支持所有分辨率设备以及“安卓7+”系统无ROOT运行，脚本支持定时运行，脚本支持手动模式运行，脚本支持自动判断异常界面等…**
 
-    <body>
+**脚本不会完成：“去邀请（因为必须邀请成功）”，“去收集（网页游戏暂不支持）”任务**
 
-    <!--首大图-->
+脚本在推荐的软件版本上已测试通过，其它软件版本请自行测试如有问题请升级软件版本
 
- <div class="bb">
+## 【脚本】[自动宠汪汪（京东脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90OrangeJs%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E8%87%AA%E5%8A%A8%E5%AE%A0%E6%B1%AA%E6%B1%AA%EF%BC%88%E4%BA%AC%E4%B8%9C%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
 
-   <img src="afghf.png"  />
+**一条龙服务以完成所有任务**
+**采用新的打开JD的方法，同时增加各种判断**
+**支持安卓7.0以上无障碍服务，实现无需ROOT运行**
+**支持定时运行，支持手动模式等……**
 
-   <p>众鸟高飞尽,孤云独自来</p>
+为了提供流畅体验，不会完成“去签到（因为若完成此任务会跳转奇怪的小程序）”“邀请好友”任务
 
- <!--透明框,放止图片被单独打开-->
+## 【脚本】[微博任务自动脚本（微博脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90OrangeJs%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E5%BE%AE%E5%8D%9A%E4%BB%BB%E5%8A%A1%E8%87%AA%E5%8A%A8%E8%84%9A%E6%9C%AC%EF%BC%88%E5%BE%AE%E5%8D%9A%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
+**脚本支持所有分辨率设备以及“安卓7+”系统无ROOT运行，脚本支持定时运行，支持自动判断异常界面，暂不支持手动模式运行**
 
-<div class="bc"></div>
+**脚本不会完成“去分享”任务！同时在完成任务时所发送的微博，评论，转发的微博，关注的账号均会自动删除或取关等**
 
- </div>   
+脚本在推荐的软件版本上已测试通过，其它软件版本请自行测试如有问题请升级软件版本
 
-<!--顶栏右列滑出-->
+## 【脚本】[多多果园自动脚本（拼多多脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90OrangeJs%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E5%A4%9A%E5%A4%9A%E6%9E%9C%E5%9B%AD%E8%87%AA%E5%8A%A8%E8%84%9A%E6%9C%AC%EF%BC%88%E6%8B%BC%E5%A4%9A%E5%A4%9A%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
+**脚本支持所有分辨率设备以及“安卓7+”系统无ROOT运行，脚本支持定时运行，脚本支持手动模式运行，脚本支持异常界面判断等…**
 
-<div class="ab">
+**脚本不会完成所有需要拼单或者购买的任务，以及邀请好友、添加好友任务等…**
 
-    <span class="abc">↓</span>
+脚本在推荐的软件版本上已测试通过，其它软件版本请自行测试如有问题请升级软件版本
 
-<a href="index2.html">聚合网页</a>
+## 【脚本】[自动微信发消息（微信脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90Orange%20Js%20%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E8%87%AA%E5%8A%A8%E5%8F%91%E6%B6%88%E6%81%AF%EF%BC%88%E5%BE%AE%E4%BF%A1%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
 
-<a href="https://www.runoob.com/">菜鸟教程</a>
+**本脚本支持定时运行，支持安卓7及以上系统无需ROOT运行，支持防误触等**
 
-<a href="https://www.yangqq.com/link.html">优秀个人博客</a>
+**目前在微信7.0.13（Play版与国内版），7.0.12（Play版与国内版），7.0.10（国内版）和7.0.4（国内版）已测试通过，同时在微信7.0.12及之后更新的版本上可发送任意文件消息，仅需在消息框内输入文件的全路径即可，脚本的发送对象可以是“联系人”,“群聊”,“公众号”**
 
-</div>
+## 【脚本】[自动健康打卡（完美校园脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90OrangeJs%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E8%87%AA%E5%8A%A8%E5%81%A5%E5%BA%B7%E6%89%93%E5%8D%A1%EF%BC%88%E5%AE%8C%E7%BE%8E%E6%A0%A1%E5%9B%AD%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
 
-<!--顶栏-->
+**由于涉及个人隐私信息，本脚本首次使用AES128位加密算法并使用每个安卓设备独一无二的Android ID和16位随机数组成的32位密码来加密循环3次以确保个人隐私信息安全，且整个加密或解密过程完全在本地进行，倘若密文不甚泄露，在没有密码的情况下，使用目前世界上最快的超级计算机暴力破解AES算法也大概需要上亿年**
 
-<div class="aa">
+**脚本的首次运行需要进行配置信息保存，但配置过程非常简单，您只需要和平常健康打卡时一样正常填写表单即可，且若您最近一切正常，脚本还可快速帮您进行选择，您也可根据您自身情况进行填写，脚本完全支持个性化填写的配置。**
 
-    <p>诸葛陋室</p>
+**配置完成之后的运行可直接填写保存的配置信息，且在手机流畅的情况下，从打开软件到信息填写完成提交整个过程不会超过1分钟。**
 
-    </div>
+**此外脚本依然继承本项目其它脚本的无需ROOT，全自动一条龙服务，定时运行等特点**
 
-    <!--卡片-->
+## 【脚本】[自动动态点赞（QQ脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90OrangeJs%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E8%87%AA%E5%8A%A8%E5%8A%A8%E6%80%81%E7%82%B9%E8%B5%9E%EF%BC%88QQ%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
 
-<div class="cc">
+**这是一个自动在QQ中点赞好友动态中的说说或单个好友空间中的说说的脚本，现已支持QQ8.2.7和8.3.0版本并会向后兼容。**
 
-<p>这里分享一些有趣有用的网址网站:
+**脚本提供自动打开QQ至指定界面点赞的功能，同时也提供自定义点赞界面功能。支持在QQ各种主题下运行，支持普通模式和简洁模式下的QQ，支持对单条说说最高99次点赞并提供自定义点赞次数功能，支持计时运行和定时运行脚本。同时本脚本也开始率先测试返回方法的保存功能，您可在6种不同的返回方法中选择适用您设备的返回方法来实现返回操作。**
 
-<a href="https://www.jianshu.com/p/1ee07be3ce55">点击进入</a></p>
+## 【脚本】[种豆得豆自动脚本（京东脚本）](https://github.com/Orange-shirt/OrangeJs/blob/master/%E3%80%90Orange%20Js%20%E6%A9%98%E8%A1%AB%E3%81%AE%E8%84%9A%E6%9C%AC%E3%80%91%E7%A7%8D%E8%B1%86%E5%BE%97%E8%B1%86%E8%87%AA%E5%8A%A8%E8%84%9A%E6%9C%AC%EF%BC%88%E4%BA%AC%E4%B8%9C%E8%84%9A%E6%9C%AC%EF%BC%89)
+![image](http://code.aliyun.com/orange_shirt/OrangeJs/raw/master/Script_author.png)
 
-</div>
+**支持安卓7及以上系统全分辨率的设备使用无障碍服务无需ROOT运行**
 
-<div class="cc">
+**支持自动打开京东至活动页面完成各项任务，支持判断各种任务完成状态，每日上限，支持自动收集等**
 
-<p>功名万里忙如燕，斯文一脉微如线。光阴寸隙流如电，风霜两鬓白如练。尽道便休官，林下何曾见？至今寂寞彭泽县。<br>
+**支持检测到异常界面自动跳转活动目标页面防止误触，支持计时运行与定时运行，支持保存返回方法，支持切换吐司（Toast）/悬浮日志 等**
 
-—— 元代 · 薛昂夫《塞鸿秋·功名万里忙如燕》</p>
+**在最新版京东已测试通过，可能支持多个京东版本具体请自行测试本脚本未对京东版本进行限制**
 
-</div>
-
-<div class="cc">
-
-<p>风雨替花愁。风雨罢，花也应休。劝君莫惜花前醉，今年花谢，明年花谢，白了人头。乘兴两三瓯。拣溪山好处追游。但教有酒身无事，有花也好，无花也好，选甚春秋。<br>—— 元代 · 赵秉文《青杏儿·风雨替花愁》</p>
-
-</div>
-
-<div class="cc">
-
-<p>宁可少活十年，休得一日无权，大丈夫时乖命蹇。有朝一日天随人愿，赛田文养客三千。<br>—— 元代 · 严忠济《天净沙·宁可少活十年》</p>
-
-</div>
-
-<!--这是他的脚-->
-
-        <div class="ff">
-
-            <p id="ffone">诸葛陋室</p>
-
-<p id="fftwo">斯人若彩虹，遇上方知有</p>
-
-<div><a href="https://github.com/meihongfei/"><img id="icoone"src="Screenshot_20200404_180441.jpg"></a></div>
-
-<div><a href><img src="Screenshot_20200404_180515.jpg"></a></div>
-
-<div><a href="mailto:meihongfei369@163.com"><img src="Screenshot_20200404_180542.jpg"></a></div>
-
-<hr>
-
-<span>古来多少人,都付笑谈中;但见墙外花,不见帝王老。 </span>
-
-        </div>
-
-    
-
-    </body>
-
-</html>
-
+<a rel="license" href="https://creativecommons.org/licenses/by-nc/4.0/deed.zh"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />本作品采用<a rel="license" href="https://creativecommons.org/licenses/by-nc/4.0/deed.zh">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
